--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <section class="middle-container">
         <div id="skills">
-            <h2>My Skills<hr class=head-line></hr></h2>
+            <h2 class="heading">My Skills<hr class=head-line></hr></h2>
 
             <div class="skill-row">
                 <div class="row">
@@ -102,7 +102,7 @@
        
     <section class="projects">
         <div id="projects">
-            <h2>Projects<hr class=head-line></hr></h2>
+            <h2 class="heading">Projects<hr class=head-line></hr></h2>
             <div class="skill-row">
                 <div class="card">
                     <div class="head">Smart Monitoring</div>
@@ -123,13 +123,13 @@
                       >
                     </div>  -->
                 </div>     
-                <div class="card">
+                <!-- <div class="card">
                     <div class="head">A Minimal URL</div>
                     <p class="content">
                         A minimal url shortner web application which helps users to short the links. 
                         It will also helps users to keep track of click count!
                     </p>
-                    <!-- <div class="links">
+                     <div class="links">
                       <a
                         target="_blank"
                         href="https://github.com/saurabhshalu/COVID-19"
@@ -137,8 +137,8 @@
                         rel="noopener"
                         >View code</a
                       >
-                    </div>   -->
-                </div>
+                    </div>  
+                </div> -->
                 <div class="card">
                     <div class="head">GECM Library</div>
                     <p class="content">
