--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <header>
         <div class="logo">
-            <h1 style="color: rgb(247, 238, 165); font-family: 'Josefin Sans', sans-serif; letter-spacing: 7px;">Mansi</h1>
+            <img src="images/logo1.png" alt="" height="80" width="100">
+            <!-- <h1 style="color: rgb(247, 238, 165); font-family: 'Josefin Sans', sans-serif; letter-spacing: 7px;">Mansi</h1> -->
         </div>
         <nav>
             <input type="checkbox" id="nav" class="hidden"/>
@@ -49,40 +50,39 @@
 
     </section>
     <section class="middle-container">
-        <div id="skills">
+        <div id="skills" class="skills">
             <h2 class="heading">My Skills<hr class=head-line></hr></h2>
 
-            <div class="skill-row">
-                <div class="row">
-                    <div class="column">
-                        <h3>Front-end</h3>
-                        <ul>
+            <div class="skills-div">
+                <div class="skill">
+                    <h3>Front-end</h3>
+                    <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
                         <li>JavaScript</li> 
                         <!-- <li>TypeScript</li>
                         <li>Angular</li> -->
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3>Back-end</h3>
-                        <ul>
+                    </ul>
+                </div>
+                <div class="skill">
+                    <h3>Back-end</h3>
+                    <ul>
                         <li>Python</li>
                         <li>Java</li>
                         <li>SQL</li>
-                        </ul>
-                    </div>
-                    <div class="column1">
-                        <h3>Other</h3>
-                        <ul>
+                    </ul>
+                </div>
+                <div class="skill">
+                    <h3>Other</h3>
+                    <ul>
                         <li>Flask</li>
                         <li>Flutter</li>
                         <li>IOT</li>
                         <!-- <li>Java</li> -->
-                        </ul>
-                    </div>
+                    </ul>
                 </div>
             </div>
+        
             <div class="skill-row">
                 <img class="computer-img" src="images/computer.png" alt="computer-image">
                 <h3>Design & Development</h3>
