--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo1.png" alt="" height="80" width="100">
+            <img src="images/logo.png" alt="" height="80" width="80">
             <!-- <h1 style="color: rgb(247, 238, 165); font-family: 'Josefin Sans', sans-serif; letter-spacing: 7px;">Mansi</h1> -->
         </div>
         <nav>
